# dynamic_plugin_api

./: .clang-format  .gitignore  CMakeLists.txt  app.cpp  plugin.hpp  test_plugin1.cpp  test_plugin2.cpp  test_plugin3.cpp
